emg.css: Fix scrollbar colors on select element

--- a/resources/app/emg.css
+++ b/resources/app/emg.css
@@ -39,13 +39,14 @@ footer svg{position:relative;top:3px;fill:#fff;transition:fill .2s cubic-bezier(
 .footer #moon,.footer #palettes,.footer #fancy,.footer #reset{visibility:visible;opacity:1;transition-delay:0s}
 .light #overlay{background-color:rgba(255,255,255,.85)}
 
+select::-webkit-scrollbar{width:32px}
 html::-webkit-scrollbar,#cheatList::-webkit-scrollbar,#cheatPrint::-webkit-scrollbar,#log::-webkit-scrollbar,#romBrowser::-webkit-scrollbar{width:16px}
-html::-webkit-scrollbar-track,html #cheatList::-webkit-scrollbar-track,html #cheatPrint::-webkit-scrollbar-track,html #log::-webkit-scrollbar-track,html #romBrowser::-webkit-scrollbar-track{background-color:#0f0f0f}
-html::-webkit-scrollbar-thumb,html #cheatList::-webkit-scrollbar-thumb,html #cheatPrint::-webkit-scrollbar-thumb,html #log::-webkit-scrollbar-thumb,html #romBrowser::-webkit-scrollbar-thumb{background-color:#777}
-html::-webkit-scrollbar-thumb:hover,html #cheatList::-webkit-scrollbar-thumb:hover,html #cheatPrint::-webkit-scrollbar-thumb:hover,html #log::-webkit-scrollbar-thumb:hover,html #romBrowser::-webkit-scrollbar-thumb:hover{background-color:#555}
-.light::-webkit-scrollbar-track,.light #cheatList::-webkit-scrollbar-track,.light #cheatPrint::-webkit-scrollbar-track,.light #log::-webkit-scrollbar,.light #romBrowser::-webkit-scrollbar-track{background-color:#eaeaea}
-.light::-webkit-scrollbar-thumb,.light #cheatList::-webkit-scrollbar-thumb,.light #cheatPrint::-webkit-scrollbar-thumb,.light #log::-webkit-scrollbar-thumb,.light #romBrowser::-webkit-scrollbar-thumb{background-color:#bbb}
-.light::-webkit-scrollbar-thumb:hover,.light #cheatList::-webkit-scrollbar-thumb:hover,.light #cheatPrint::-webkit-scrollbar-thumb:hover,.light #log::-webkit-scrollbar-thumb:hover,.light #romBrowser::-webkit-scrollbar-thumb:hover{background-color:#999}
+html::-webkit-scrollbar-track,#cheatList::-webkit-scrollbar-track,#cheatPrint::-webkit-scrollbar-track,#log::-webkit-scrollbar-track,#romBrowser::-webkit-scrollbar-track,select::-webkit-scrollbar-track{background-color:#0f0f0f}
+html::-webkit-scrollbar-thumb,#cheatList::-webkit-scrollbar-thumb,#cheatPrint::-webkit-scrollbar-thumb,#log::-webkit-scrollbar-thumb,#romBrowser::-webkit-scrollbar-thumb,select::-webkit-scrollbar-thumb{background-color:#777}
+html::-webkit-scrollbar-thumb:hover,#cheatList::-webkit-scrollbar-thumb:hover,#cheatPrint::-webkit-scrollbar-thumb:hover,#log::-webkit-scrollbar-thumb:hover,#romBrowser::-webkit-scrollbar-thumb:hover,select::-webkit-scrollbar-thumb:hover{background-color:#555}
+.light::-webkit-scrollbar-track,.light #cheatList::-webkit-scrollbar-track,.light #cheatPrint::-webkit-scrollbar-track,.light #log::-webkit-scrollbar,.light #romBrowser::-webkit-scrollbar-track,.light select::-webkit-scrollbar-track{background-color:#eaeaea}
+.light::-webkit-scrollbar-thumb,.light #cheatList::-webkit-scrollbar-thumb,.light #cheatPrint::-webkit-scrollbar-thumb,.light #log::-webkit-scrollbar-thumb,.light #romBrowser::-webkit-scrollbar-thumb,.light select::-webkit-scrollbar-thumb{background-color:#bbb}
+.light::-webkit-scrollbar-thumb:hover,.light #cheatList::-webkit-scrollbar-thumb:hover,.light #cheatPrint::-webkit-scrollbar-thumb:hover,.light #log::-webkit-scrollbar-thumb:hover,.light #romBrowser::-webkit-scrollbar-thumb:hover,.light select::-webkit-scrollbar-thumb:hover{background-color:#999}
 
 [type=checkbox]{position:relative;top:5.5px;left:2px;width:23px;height:23px;margin:0 5px;cursor:pointer;-moz-appearance:none;-webkit-appearance:none;appearance:none;outline:0;border:2px solid #ccc;border-radius:3px;transition:border-color .2s cubic-bezier(.4,0,.22,1)}
 [type=checkbox]:before{content:'';position:absolute;left:-2px;top:1px;width:100%;height:50%;border:4px solid #ccc;border-radius:0;border-top-style:none;border-right-style:none;border-color:transparent;transform:scale(.5) rotate(-45deg);transition:border-color .1s cubic-bezier(.4,0,.22,1)}
